kube-digbank-with-cdd-ctagent.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-front
spec:
  ports:
  - port: 8082
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: bank-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank
  labels:
    app: bank-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-app
  template:
    metadata:
      labels:
        app: bank-app
    spec:
      containers:
      - name: bank
        image: asburymr/digitalbank:2.0.0.103
        ports:
        - containerPort: 8080
          name: html
        volumeMounts:
        - name: cdd-dir
          mountPath: /home/cdd/.cdd
      # NOTE: for container to have write permissions to directory the permissions
      # must be correct and you need to change the security context:
      #     ls -laZ logs  --check the context
      #     chcon -Rt svirt_sandbox_file_t logs  --change the context to allow kub containers to see it
      restartPolicy: Always
      volumes:
      - name: cdd-dir
        hostPath:
          path: /home/cdd/.cdd
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: bank-broker
spec:
  ports:
  - name: bank-broker-l
    port: 8161
    targetPort: 8161
  - name: bank-broker-h
    port: 61616
    targetPort: 61616
  selector:
    app: broker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-broker-dep
  labels:
    app: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
      - name: broker
        image: asburymr/digitalbroker:latest
        ports:
        - containerPort: 8161
          name: bank-broker-l
        - containerPort: 61616
          name: bank-broker-h
        resources: {}
      restartPolicy: Always
      volumes: null
---
apiVersion: v1
kind: Service
metadata:
  name: bank-credit
spec:
  ports:
  - name: bank-credit-ws
    port: 3500
    targetPort: 8080
  selector:
    app: credit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-credit-dep
  labels:
    app: credit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credit
  strategy: {}
  template:
    metadata:
      labels:
        app: credit
    spec:
      containers:
      - name: credit
        image: asburymr/digitalcredit:2.0.0.102
        ports:
        - containerPort: 8080
          name: bank-credit-ws
      restartPolicy: Always
      volumes: null
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bank-ingress
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  backend:
    serviceName: bank-front
    servicePort: 8082
